# flaskapp

./: .dockerignore  .env.template  justfile  main.py  pyproject.toml  setup.py  wsgi.py
docker/: Dockerfile  README.md  docker-compose.yml
docs/: devel.md
docs/specs/: authentication.md  demoapp.md  demoapp.mp  inplementation.md  spec.md
flaskapp/: __init__.py
flaskapp/auth/: README.md  __init__.py  forms.py  models.py  routes.py
flaskapp/auth/templates/auth/: link.html
flaskapp/cli/: __init__.py  cmd1.py  cmd2.py  config.py  dev.py
flaskapp/config/: base.py  development.py
flaskapp/demo/: __init__.py  forms.py  routes.py
flaskapp/main/: routes.py
flaskapp/main/templates/main/: dashboard.html
flaskapp/static/: styles.css
flaskapp/templates/: base.html
flaskapp/templates/auth/: link.html  login.html  profile.html
flaskapp/templates/base/: base.html  page.html
flaskapp/templates/demo/: form.html  hello.html  index.html
flaskapp/templates/main/: index.html
migrations/versions/: 3ba8cb4fc1bf_database_changes.py
src/app/config/: __init__.py  production.py  testing.py
src/flaskapp/: __init__.py
