[project]
name = "flaskapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric Busboom", email = "eric@busboom.org" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
flaskapp = "flaskapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
